--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,24 @@
     android:background="@color/background_app_color"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:id="@+id/my_linkedin_page"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="12dp"
+        android:importantForAccessibility="no"
+        android:padding="10dp"
+        android:src="@drawable/linkedin_logo"
+        app:layout_constraintBottom_toBottomOf="@id/flow_page"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/flow_page" />
+
     <FrameLayout
         android:id="@+id/flow_page"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingBottom="24dp"
         android:elevation="1dp"
+        android:paddingBottom="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -25,8 +37,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:importantForAccessibility="no"
                 android:layout_marginTop="24dp"
+                android:importantForAccessibility="no"
                 android:src="@drawable/ic_shop_flow"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
