--- a/app/src/main/res/layout/episodes_items_list.xml
+++ b/app/src/main/res/layout/episodes_items_list.xml
@@ -14,8 +14,7 @@
         android:layout_marginTop="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/item_list_flow_app" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/title_episode"
@@ -26,7 +25,7 @@
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@id/image_episode"
         app:layout_constraintTop_toTopOf="@id/image_episode"
-        tools:text="CIRO GOMES - Flow Podcast #397" />
+        />
 
     <TextView
         android:id="@+id/description_episode"
@@ -35,8 +34,7 @@
         android:textColor="#CAC9C9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/title_episode"
-        app:layout_constraintTop_toBottomOf="@id/title_episode"
-        tools:text="Ciro Gomes foi deputado, prefeito, governador, ministro e presidenciável. Twitter e Instagram: @cirogomes Youtube e Facebook: ..."/>
+        app:layout_constraintTop_toBottomOf="@id/title_episode"/>
 
     <View
         android:layout_width="match_parent"
