--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,11 +76,23 @@
         android:id="@+id/fiap_logo"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/fiap_logo"
-        app:layout_constraintTop_toTopOf="@id/logo"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="50dp"
-        android:importantForAccessibility="no"/>
+        android:importantForAccessibility="no"
+        android:src="@drawable/fiap_logo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/logo" />
+
+    <ImageView
+        android:id="@+id/stellantis_logo"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="50dp"
+        android:importantForAccessibility="no"
+        android:src="@drawable/ic_stellantis"
+        android:translationY="-25dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/logo" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/episodes_list"
